--- a/rbei_ui5_reuse_rep/webapp/css/style.css
+++ b/rbei_ui5_reuse_rep/webapp/css/style.css
@@ -1,1 +1,5 @@
-/* Enter your custom styles here */
+.title {
+	text-decoration: underline;
+	font-weight: bold;
+	text-transform: uppercase;
+}/* Enter your custom styles here */
