--- a/rbei_ui5_reuse_rep/webapp/view/View1.view.xml
+++ b/rbei_ui5_reuse_rep/webapp/view/View1.view.xml
@@ -1,7 +1,7 @@
 <mvc:View xmlns:mvc="sap.ui.core.mvc" xmlns="sap.m" xmlns:f="sap.f" xmlns:s="sap.ui.layout.form" xmlns:tnt="sap.tnt" controllerName="RBEI_UI5.rbei_ui5_reuse_rep.controller.View1" displayBlock="true">
 	<App id="app">
 		<pages>
-			<Page id="page" title="{i18n>title}">
+			<Page id="page" showHeader="false">
 				<content>
 					<tnt:ToolPage>
 						<tnt:header>
@@ -15,12 +15,13 @@
 						<tnt:mainContents>
 							<s:SimpleForm id="dialogform" editable="true" layout="ResponsiveGridLayout" title="Sign in (only Bosch employees)" labelSpanXL="3" labelSpanL="3" labelSpanM="3" labelSpanS="12" adjustLabelSpan="false" emptySpanXL="4" emptySpanL="4" emptySpanM="4" emptySpanS="0" columnsXL="1" columnsL="1" columnsM="1" singleContainerFullSize="false">
 								<s:content>
-									<Label text="Email/Username"/>
-									<Input id="email" placeholder="Eg. johm@in.bosch.com or Johm"/>
-									<Button text="GET OTP" type="Emphasized" press="onGetotp"/>
-									<Label text="Enter OTP"/>
-									<Input id="otp" placeholder="Please enter OTP"/>
-									<Button text="Sign in" type="Emphasized" press="onSignin"/>
+									<Label id="emaillbl" text="Email/Username"/>
+									<Input id="emailinp" placeholder="Eg. johm@in.bosch.com or Johm"/>
+									<Button id="emailbtn" text="GET OTP" type="Emphasized" press="onGetotp"/>
+									<Label id="otplbl" text="Enter OTP"/>
+									<Input id="otpinp" placeholder="Please enter OTP"/>
+									<Button id="otpbtn" text="Sign in" type="Emphasized" press="onSignin"/>
+									<!--<Button id="otpbtn" text="Sign in" type="Emphasized" press="action" xmlns:action="http://schemas.sap.com/sapui5/extension/sap.ui.core.CustomData/1" action:wiring="\{'press':\{'navigation':\{'routeName':'App'\}\}\}"/>-->
 								</s:content>
 							</s:SimpleForm>
 						</tnt:mainContents>
